# cmake_minimum_required(VERSION <specify CMake version here>)
project()

set(CMAKE_CXX_STANDARD 14)

add_executable(
        火炬/lab/1110310422-胡明-lab1/1110310422-胡明-lab1.cpp
        火炬/lab/1110310422-胡明-lab2/main.cpp
        火炬/lab/1110310422-胡明-lab3/main.cpp
        火炬/郑胜文第一次实验/实验要求1.cpp
        火炬/郑胜文第一次实验/实验要求2.cpp
        火炬/郑胜文第三次实验/main.c
        火炬/郑胜文第二次实验/main.cpp
        火炬/郑胜文第五次实验/main.cpp
        火炬/郑胜文第四次实验/main.cpp
        assert.cpp
        C++练手.cpp
        CSDN二叉搜索树.cpp
        CSDN二叉树.cpp
        KMP.cpp
        moni.cpp
        test.cpp
        test2.cpp
        VSCODE.cpp
        一元多项式乘法.cpp
        一次多项式.cpp
        上机实验2——二叉树.cpp
        上机实验3——图.cpp
        上机实验作业1__一元多项式乘法.cpp
        两个有序链表序列的交集.cpp
        二叉排序树自制.cpp
        二叉树作业3.cpp
        二叉树遍历.cpp
        作业.cpp
        作业2.cpp
        作业2——已知先序求多少种树.c
        作业2根据先序找出有多少树.cpp
        作业2链表.cpp
        作业2顺序链表.cpp
        作业5——线段树.cpp
        冰雹猜想.cpp
        单链表.cpp
        双向链表.cpp
        双向链表解决约瑟夫.cpp
        后缀表达式.cpp
        含有负权值的单源最短路径.cpp
        哈夫曼.cpp
        图.cpp
        "图的邻接矩阵 自制.cpp"
        "图的邻接表 自制.cpp"
        图的邻接表.cpp
        堆与有限序列.cpp
        备份实验3.cpp
        备份测试数据一元多项式.cpp
        字符串.cpp
        已修正好的栈.cpp
        指针栈.cpp
        排序.cpp
        排序2.cpp
        文件.cpp
        无向图数组CSDN.cpp
        更正栈.cpp
        更正队列.cpp
        最大子列和.cpp
        最小栈.cpp
        有序链表序列的合并.cpp
        期末——后序遍历第一个结点.cpp
        期末——有向图有无圈DFS.cpp
        期末考研算法题.cpp
        栈基本函数.cpp
        栈的应用-二进制转换.cpp
        栈的应用.cpp
        树是否同构.cpp
        汉诺塔.cpp
        测试.cpp
        糖果作业.cpp
        约瑟夫.cpp
        线段树.cpp
        线段树2最大值.cpp
        线段树更新版.cpp
        给乖乖.cpp
        贝尔曼福特.cpp
        贝尔曼福特2.cpp
        迷宫.cpp
        迷宫C++.cpp
        链表合并.cpp
        队列.cpp
        队列解决约瑟夫.cpp
        雷子.cpp
        顺序栈.cpp
        顺序队列.cpp Test_5.cpp Test_5.h)
